--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,33 +5,38 @@
 
 - include: "install-{{ ansible_os_family }}.yml"
 
-- name: Create log directory
+- name: Create sensu_server_conf_d_dir
   file:
-    path: "{{ sensu-server_log_dir }}"
-    mode: 0755
-    owner: "{{ sensu-server_user }}"
-    group: "{{ sensu-server_group }}"
+    path: "{{ sensu_server_conf_d_dir }}"
     state: directory
-  notify: Restart sensu-server
 
-- name: Create db directory
+- name: Create sensu_server_extensions_dir
   file:
-    path: "{{ sensu-server_db_dir }}"
-    mode: 0755
-    owner: "{{ sensu-server_user }}"
-    group: "{{ sensu-server_group }}"
+    path: "{{ sensu_server_extensions_dir }}"
     state: directory
-  notify: Restart sensu-server
 
-- name: Create sensu-server.conf
+- name: Create sensu_server_plugins_dir
+  file:
+    path: "{{ sensu_server_plugins_dir }}"
+    state: directory
+
+- name: Create sensu_server_config_file
   template:
-    src: sensu-server.conf.j2
-    dest: "{{ sensu-server_conf_file }}"
-    validate: echo %s
+    src: config.json.j2
+    dest: "{{ sensu_server_config_file }}"
+    validate: "python -c 'import sys; import json; json.loads(open(sys.argv[1]).read())' %s"
+  notify: Restart sensu-server
+
+- name: Create json files
+  template:
+    src: json.j2
+    dest: "{{ sensu_server_conf_d_dir }}/{{ item }}.json"
+    validate: "python -c 'import sys; import json; json.loads(open(sys.argv[1]).read())' %s"
+  with_items: "{{ sensu_server_config_fragments.keys() }}"
   notify: Restart sensu-server
 
 - name: Start sensu-server
   service:
-    name: "{{ sensu-server_service }}"
+    name: "{{ sensu_server_service }}"
     enabled: true
     state: started
