--- a/vars/FreeBSD.yml
+++ b/vars/FreeBSD.yml
@@ -1,2 +1,4 @@
-__sensu-server_db_dir: /var/db/sensu-server
-__sensu-server_conf_dir: /usr/local/etc/sensu-server
+__sensu_server_user: sensu
+__sensu_server_group: sensu
+__sensu_server_service: sensu-server
+__sensu_server_config_dir: /usr/local/etc/sensu
