--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -2,4 +2,17 @@
   roles:
     - ansible-role-sensu-server
   vars:
-    sensu-server_config: ""
+    freebsd_repos:
+      sensu:
+        enabled: "true"
+        url: https://sensu.global.ssl.fastly.net/freebsd/FreeBSD:10:amd64/
+        mirror_type: srv
+        signature_type: none
+        priority: 100
+        state: present
+    sensu_server_config: {}
+    sensu_server_config_fragments:
+      transport:
+        transport:
+          name: rabbitmq
+          reconnect_on_error: True
