[feature] Support other platforms (#3)
* remove "hard" dependency

see https://github.com/reallyenglish/ansible-role-sensu-client/pull/3

* support all platforms

and introduce sensu_server_log_dir

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,7 @@ sensu_server_config_file: "{{ sensu_server_config_dir }}/config.json"
 sensu_server_conf_d_dir: "{{ sensu_server_config_dir }}/conf.d"
 sensu_server_extensions_dir: "{{ sensu_server_config_dir }}/extensions"
 sensu_server_plugins_dir: "{{ sensu_server_config_dir }}/plugins"
+sensu_server_log_dir: /var/log/sensu
 sensu_server_flags: ""
 sensu_server_config: {}
 sensu_server_config_fragments: {}
