--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -1,7 +1,25 @@
 - hosts: localhost
   roles:
+    - name: reallyenglish.apt-repo
+      when: ansible_os_family == 'Debian'
+    - name: reallyenglish.redhat-repo
+      when: ansible_os_family == 'RedHat'
+    - name: reallyenglish.language-ruby
+      when: ansible_os_family == 'OpenBSD'
+    - name: reallyenglish.freebsd-repos
+      when: ansible_os_family == 'FreeBSD'
     - ansible-role-sensu-server
   vars:
+    redhat_repo:
+      sensu:
+        baseurl: https://sensu.global.ssl.fastly.net/yum/$releasever/$basearch
+        gpgcheck: no
+        enabled: yes
+    apt_repo_keys_to_add:
+      - https://sensu.global.ssl.fastly.net/apt/pubkey.gpg
+    apt_repo_enable_apt_transport_https: yes
+    apt_repo_to_add:
+      - "deb https://sensu.global.ssl.fastly.net/apt {{ ansible_distribution_release }} main"
     freebsd_repos:
       sensu:
         enabled: "true"
