--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -34,3 +34,9 @@
         transport:
           name: rabbitmq
           reconnect_on_error: True
+    sensu_server_gem_binary: "{% if ansible_os_family == 'OpenBSD' %}gem{% else %}/opt/sensu/embedded/bin/gem{% endif %}"
+    sensu_server_gems:
+      - name: sensu-plugins-disk-checks
+        state: present
+      - name: sensu-plugins-load-checks
+        state: present
