[bugfix] add initial integration test (#5)
* add initial integration test

an issue still remains: sensu-client fails to start at initial ansible
play.

* set sensu_client_config_fragments

without it, `sensu-client` does not restart

* fix wrong name

* add examples for API

* patch sensu-transport

* create symlinks when system's gem is used

* workaround an issue in jenkins

* set sensu_client_gem_binary

without it, system's gem is used and the test fails

* rename

* remove block to workaround an issue in ubuntu box

TASK [ansible-role-sensu-client : Create symlinks]
*****************************
fatal: [localhost]: FAILED! => {"failed": true,
"msg": "'dict object' has no attribute 'stdout_lines'"}

the latest, 0.3.0, does not cause the error.

* bugfix: quote

* workaround a possible bug in ansible

`when` condition should be evaluated before expanding the valiable in
`with_items`, and ansible should not raise error, IMO.

* connect to the build

* workaround an issue in jenkins

* bugfix: missing default sensu_server_gem_binary

* bugfix: readability

* bugfix: clarify what the variable is

* update the test (7de8d95)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,3 +10,4 @@ sensu_server_log_dir: /var/log/sensu
 sensu_server_flags: ""
 sensu_server_config: {}
 sensu_server_config_fragments: {}
+sensu_server_gem_binary: gem
