--- a/tests/integration/example/Vagrantfile
+++ b/tests/integration/example/Vagrantfile
@@ -49,11 +49,11 @@ Vagrant.configure("2") do |config|
   end
   config.vm.box = "trombik/ansible-freebsd-10.3-amd64"
 
-  config.vm.define "client1" do |c|
-    c.vm.network "private_network", ip: "192.168.21.100"
-    c.vm.hostname = "client1.virtualbox.reallyenglish.com"
+  config.vm.define "sensu1" do |c|
+    c.vm.network "private_network", ip: "192.168.21.202"
+    c.vm.hostname = "sensu1.virtualbox.reallyenglish.com"
     c.vm.provision :ansible do |ansible|
-      ansible.limit = "192.168.21.100"
+      ansible.limit = "192.168.21.202"
       ansible.playbook = "site.yml"
       ansible.extra_vars = {
         ansible_python_interpreter: "/usr/local/bin/python",
@@ -66,11 +66,11 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  config.vm.define "server1" do |c|
-    c.vm.network "private_network", ip: "192.168.21.200"
-    c.vm.hostname = "server1.virtualbox.reallyenglish.com"
+  config.vm.define "client1" do |c|
+    c.vm.network "private_network", ip: "192.168.21.100"
+    c.vm.hostname = "client1.virtualbox.reallyenglish.com"
     c.vm.provision :ansible do |ansible|
-      ansible.limit = "192.168.21.200"
+      ansible.limit = "192.168.21.100"
       ansible.playbook = "site.yml"
       ansible.extra_vars = {
         ansible_python_interpreter: "/usr/local/bin/python",
