[bugfix] add missing dependency (#14)

--- a/tests/integration/example/requirements.yml
+++ b/tests/integration/example/requirements.yml
@@ -8,3 +8,4 @@
 - name: reallyenglish.sensu-client
 - name: reallyenglish.redhat-repo
 - name: reallyenglish.uchiwa
+- name: reallyenglish.x509-certificate
