[bugfix] introduce new handler Restart sensu services (#12)
* [bugfix] introduce new handler Restart sensu services

fixes #11

the handler is intended to be called when all sensu services should
be restarted, such as when one of configuration files changes.

* QA

* [bugfix] add `listen` to existing one

instead of creating new one

* add OpenBSD 6.1, update boxes

* update meta

* support OpenBSD 6.2

* add missing dependency

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,15 +9,19 @@ galaxy_info:
   - name: FreeBSD
     versions:
     - 10.3
-#  - name: OpenBSD
-#    versions:
-#    - 6.0
-#  - name: Ubuntu
-#    versions:
-#    - trusty
-#  - name: EL
-#    versions:
-#    - 7
+  - name: OpenBSD
+    versions:
+    - 6.0
+    - 6.1
+# XXX https://github.com/ansible/galaxy-issues/issues/296
+#   - 6.2
+  - name: Ubuntu
+    versions:
+    - trusty
+    - xenial
+  - name: EL
+    versions:
+    - 7
 
   galaxy_tags:
     - sensu
